--- a/server-nodejs/nodetest1/views/layout.jade
+++ b/server-nodejs/nodetest1/views/layout.jade
@@ -12,6 +12,7 @@ html
     script(src='https://code.highcharts.com/highcharts.js')
     script(src='https://code.highcharts.com/modules/exporting.js')
     script (src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"')
+    script(src="http://d3js.org/d3.v4.min.js")
   body(style = "background:#CCC")
     script.
       setInterval(function() {
