--- a/server-nodejs/nodetest1/views/twoplots.jade
+++ b/server-nodejs/nodetest1/views/twoplots.jade
@@ -3,12 +3,13 @@ extends layout
 block content
 
     div 
-      h3 Changing the set point #{evaluator_data.set_point_type} to #{evaluator_data.set_point_value} #{evaluator_data.incr_decr} by #{evaluator_data.energy_change} percent.
+      h3(style="text-align:center") The new set point values reduce energy usage by 
+        span(style="color:#3c8442") #{evaluator_data.energy_saving}%.
 
       div
       p Predicted data assuming set point values:
       div.row 
-        div.col-sm-4(style="text-align:center")
+        div.col-sm-3(style="text-align:center")
           img(src="/images/ChilledWaterTemp.png" style="max-width:25%; height:auto; margin:auto")
           p(style="margin:auto") Chilled Water Temperature: #{evaluator_data.cwsetp} C 
           svg(id="ChilledWaterTempSvg" width="90" height="90" style="margin:auto")
@@ -22,7 +23,7 @@ block content
             var p = (#{evaluator_data.cwsetp} - 6.0) / (8.0 - 0.0);
             var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#63caf9");
-        div.col-sm-4(style="text-align:center")
+        div.col-sm-3(style="text-align:center")
           img(src="/images/LightingLevel.png" style="max-width:25%; height:auto; margin:auto")
           p(style="margin:auto") Lighting Level: #{evaluator_data.lil} % 
           svg(id="LightingLevelSvg" width="90" height="90" style="margin:auto")
@@ -36,7 +37,7 @@ block content
             var p = (#{evaluator_data.lil} - 0) / (100 - 0);
             var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#f7ef62");
-        div.col-sm-4(style="text-align:center")
+        div.col-sm-3(style="text-align:center")
           img(src="/images/ZoneTemp.png" style="max-width:25%; height:auto; margin:auto")
           p(style="margin:auto") Zone Temperature: #{evaluator_data.clgsetp} C 
           svg(id="ZoneTempSvg" width="90" height="90" style="margin:auto")
@@ -50,6 +51,27 @@ block content
             var p = (#{evaluator_data.clgsetp} - 24.0) / (28.0 - 24.0);
             var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#ce5a40");      
+        div.col-sm-3(style="text-align:center")
+            svg(id="FillCircleSvg" width="110" height="110" style="margin:auto")
+            p(style="text-align:center") Energy savings: #{evaluator_data.energy_saving}%
+            script.
+                var svg = d3.select("#FillCircleSvg")
+
+                var grad = svg.append("defs")
+                  .append("linearGradient").attr("id", "grad")
+                  .attr("x1", "0%").attr("x2", "0%").attr("y1", "100%").attr("y2", "0%");
+                var empty_prct = #{evaluator_data.energy_saving}
+                var fill_prct = 100 - empty_prct
+                
+                grad.append("stop").attr("offset", fill_prct.toString() + "%").style("stop-color", "lightblue");
+                grad.append("stop").attr("offset", empty_prct.toString() + "%").style("stop-color", "white");
+
+                svg.append("circle")
+                   .attr("r",50)
+                   .attr("cx",60)
+                   .attr("cy",60)
+                   .style("stroke","black")
+                   .style("fill","url(#grad)");
 
     div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px")
     script.
