--- a/server-nodejs/nodetest1/views/oneplot.jade
+++ b/server-nodejs/nodetest1/views/oneplot.jade
@@ -39,7 +39,7 @@ block content
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#f7ef62");
         div.col-sm-4(style="text-align:center")
           img(src="/images/ZoneTemp.png" style="max-width:25%; height:auto; margin:auto")
-          p(style="margin:auto") Zone Temperature: 26.0 C 
+          p(style="margin:auto") Zone Temperature: 26.7 C 
           svg(id="ZoneTempSvg" width="90" height="90" style="margin:auto")
           script.
             var tau = 2 * Math.PI; 
@@ -48,7 +48,7 @@ block content
             var width = +svg.attr("width"); 
             var height = +svg.attr("height"); 
             var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
-            var p = (26.0 - 24.0) / (28.0 - 24.0);
+            var p = (26.7 - 24.0) / (28.0 - 24.0);
             var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#ce5a40");
     div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px")
@@ -63,7 +63,7 @@ block content
                },
                xAxis: {
                    categories: [#{baseline_data.time}],
-                   title : { text: 'Time' }
+                   title : { text: 'Time (min)' }
                },
                yAxis: {
                    title: {
