--- a/server-nodejs/nodetest1/views/threeplots.jade
+++ b/server-nodejs/nodetest1/views/threeplots.jade
@@ -2,9 +2,31 @@ extends layout
 
 block content
 
-    div 
-      h3.
-        The most optimum strategy is strategy #{synthesizer_data.best_id} with a power consumption of #{synthesizer_data.best_energy} kWh.
+    div(style="text-align:center")
+      h3(style="padding-bottom:30px") Strategy #{synthesizer_data.best_id} is optimal, consuming #{synthesizer_data.best_energy} kWh
+        
+    div.row(style="margin:auto")
+      div.col-sm-4(style="text-align:center")
+        div(class="panel panel-default")
+          div(class="panel-heading", style="background-color:#32cd32") Strategy 1
+          div(class="panel-body", style="text-align:left; padding-left:30%")
+            p lighting level: #{synthesizer_data[0].lil}
+            p chilled water temperature: #{synthesizer_data[0].cwsetp}
+            p zone temperature: #{synthesizer_data[0].clgsetp}
+      div.col-sm-4(style="text-align:center")
+        div(class="panel panel-default")
+          div(class="panel-heading") Strategy 2
+          div(class="panel-body", style="text-align:left; padding-left:30%")
+            p lighting level: #{synthesizer_data[1].lil}
+            p chilled water temperature: #{synthesizer_data[1].cwsetp}
+            p zone temperature: #{synthesizer_data[1].clgsetp}
+      div.col-sm-4(style="text-align:center")
+        div(class="panel panel-default")
+          div(class="panel-heading") Strategy 3
+          div(class="panel-body", style="text-align:left; padding-left:30%")
+            p lighting level: #{synthesizer_data[2].lil}
+            p chilled water temperature: #{synthesizer_data[2].cwsetp}
+            p zone temperature: #{synthesizer_data[2].clgsetp}
 
     div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px")
     script.
@@ -18,45 +40,35 @@ block content
                },
                xAxis: {
                    categories: [#{baseline_data.time}],
-                   title : { text: 'Time' }
+                   title : { text: 'Time (min)' }
                },
                yAxis: {
                    title: {
                        text: 'Power (kW)'
                    }
                },
+               plotOptions: {
+                 series: {
+                   fillOpacity: 0.3
+                 }
+               },
                series: [
                   {
-                    name: 'Strategy 0',
-                    data: [#{synthesizer_data[0].y_predict}]
-                  },
-                  {
                     name: 'Strategy 1',
-                    data: [#{synthesizer_data[1].y_predict}]
+                    data: [#{synthesizer_data[0].y_predict}],
+                    color: 'Black'
                   },
                   {
                     name: 'Strategy 2',
-                    data: [#{synthesizer_data[2].y_predict}]
+                    data: [#{synthesizer_data[1].y_predict}],
+                    color: 'Grey'
+                  },
+                  {
+                    name: 'Strategy 3',
+                    data: [#{synthesizer_data[2].y_predict}],
+                    color: 'SlateGrey'
                   }
                ]
            });
       });
 
-    div
-      p Strategy 0 assuming set point values:
-      ul
-        li lighting level: #{synthesizer_data[0].lil}
-        li chilled water temperature: #{synthesizer_data[0].cwsetp}
-        li zone temperature: #{synthesizer_data[0].clgsetp}
-
-      p Strategy 1 assuming set point values:
-      ul
-        li lighting level: #{synthesizer_data[1].lil}
-        li chilled water temperature: #{synthesizer_data[1].cwsetp}
-        li zone temperature: #{synthesizer_data[1].clgsetp}
-      
-      p Strategy 2 assuming set point values:
-      ul
-        li lighting level: #{synthesizer_data[2].lil}
-        li chilled water temperature: #{synthesizer_data[2].cwsetp}
-        li zone temperature: #{synthesizer_data[2].clgsetp}
