CSS styling in threeplots

--- a/server-nodejs/nodetest1/views/threeplots.jade
+++ b/server-nodejs/nodetest1/views/threeplots.jade
@@ -4,32 +4,33 @@ block content
 
     script(type="text/javascript").
         $(document).ready(function() {
-             document.getElementById("#{synthesizer_data[0].best_id}").style.backgroundColor=#32cd32"
+             var idBody = #{synthesizer_data[0].best_id} + 3
+             document.getElementById("#{synthesizer_data[0].best_id}").style.backgroundColor="#0E8F17"
+             document.getElementById(idBody).style.backgroundColor="#A2DDA6"
         });
 
     div(style="text-align:center")
-      h3(style="padding-bottom:30px") Strategy #{synthesizer_data[0].best_id}
-      is optimal, consuming #{synthesizer_data[0].best_energy} kWh
+      h3(style="padding-bottom:30px") Strategy #{synthesizer_data[0].best_id} is optimal, consuming #{synthesizer_data[0].best_energy} kWh
         
     div.row(style="margin:auto")
       div.col-sm-4(style="text-align:center")
         div(class="panel panel-default")
-          div(class="panel-heading") Strategy 1
-          div(class="panel-body", style="text-align:left; padding-left:30%")
+          div#1(class="panel-heading") Strategy 1
+          div#4(class="panel-body", style="text-align:left; padding-left:30%")
             p lighting level: #{synthesizer_data[0].lil}
             p chilled water temperature: #{synthesizer_data[0].cwsetp}
             p zone temperature: #{synthesizer_data[0].clgsetp}
       div.col-sm-4(style="text-align:center")
         div(class="panel panel-default")
-          div(class="panel-heading") Strategy 2
-          div(class="panel-body", style="text-align:left; padding-left:30%")
+          div#2(class="panel-heading") Strategy 2
+          div#5(class="panel-body", style="text-align:left; padding-left:30%")
             p lighting level: #{synthesizer_data[1].lil}
             p chilled water temperature: #{synthesizer_data[1].cwsetp}
             p zone temperature: #{synthesizer_data[1].clgsetp}
       div.col-sm-4(style="text-align:center")
         div(class="panel panel-default")
-          div(class="panel-heading") Strategy 3
-          div(class="panel-body", style="text-align:left; padding-left:30%")
+          div#3(class="panel-heading") Strategy 3
+          div#6(class="panel-body", style="text-align:left; padding-left:30%")
             p lighting level: #{synthesizer_data[2].lil}
             p chilled water temperature: #{synthesizer_data[2].cwsetp}
             p zone temperature: #{synthesizer_data[2].clgsetp}
