--- a/server-nodejs/nodetest1/views/layout.jade
+++ b/server-nodejs/nodetest1/views/layout.jade
@@ -15,8 +15,7 @@ html
     script(src="http://d3js.org/d3.v4.min.js")
   body(style = "background:#CCC")
     script.
-      setInterval(function() {
-      location.reload(true);
-      }, 5000)
+      return;
+      setInterval(function() {location.reload(true);}, 5000)
 
   block content
