--- a/server-nodejs/nodetest1/views/threeplots.jade
+++ b/server-nodejs/nodetest1/views/threeplots.jade
@@ -15,25 +15,28 @@ block content
     div.row(style="margin:auto")
       div.col-sm-4(style="text-align:center")
         div(class="panel panel-default")
-          div#1(class="panel-heading") Strategy 1
+          div#1(class="panel-heading" style="font-size:18px") 
+            strong Strategy 1
           div#4(class="panel-body", style="text-align:left; padding-left:30%")
-            p Lighting Level: #{synthesizer_data[0].lil} %
-            p Chilled Water Temperature: #{synthesizer_data[0].cwsetp} C
-            p Zone Temperature: #{synthesizer_data[0].clgsetp} C
+            p(style="font-size:16px") Lighting Level: #{synthesizer_data[0].lil} %
+            p(style="font-size:16px") Chilled Water Temperature: #{synthesizer_data[0].cwsetp} C
+            p(style="font-size:16px") Zone Temperature: #{synthesizer_data[0].clgsetp} C
       div.col-sm-4(style="text-align:center")
         div(class="panel panel-default")
-          div#2(class="panel-heading") Strategy 2
+          div#2(class="panel-heading" style="font-size:18px") 
+            strong Strategy 2
           div#5(class="panel-body", style="text-align:left; padding-left:30%")
-            p Lighting Level: #{synthesizer_data[1].lil} %
-            p Chilled Water Temperature: #{synthesizer_data[1].cwsetp} C
-            p Zone Temperature: #{synthesizer_data[1].clgsetp} C
+            p(style="font-size:16px") Lighting Level: #{synthesizer_data[1].lil} %
+            p(style="font-size:16px") Chilled Water Temperature: #{synthesizer_data[1].cwsetp} C
+            p(style="font-size:16px") Zone Temperature: #{synthesizer_data[1].clgsetp} C
       div.col-sm-4(style="text-align:center")
         div(class="panel panel-default")
-          div#3(class="panel-heading") Strategy 3
+          div#3(class="panel-heading" style="font-size:18px") 
+            strong Strategy 3
           div#6(class="panel-body", style="text-align:left; padding-left:30%")
-            p Lighting Level: #{synthesizer_data[2].lil} %
-            p Chilled Water Temperature: #{synthesizer_data[2].cwsetp} C
-            p Zone Temperature: #{synthesizer_data[2].clgsetp} C
+            p(style="font-size:16px") Lighting Level: #{synthesizer_data[2].lil} %
+            p(style="font-size:16px") Chilled Water Temperature: #{synthesizer_data[2].cwsetp} C
+            p(style="font-size:16px") Zone Temperature: #{synthesizer_data[2].clgsetp} C
 
     div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px")
     script.
