--- a/server-nodejs/nodetest1/views/building_conditions.jade
+++ b/server-nodejs/nodetest1/views/building_conditions.jade
@@ -5,7 +5,7 @@ block content
   script(src="http://d3js.org/d3.v4.min.js")
 
   div 
-    h1(style="text-align: center; padding-bottom:50px") Average Conditions when #{searchbin_data.building} is Consuming is #{searchbin_data.usagekW} kW
+    h1(style="text-align: center; padding-bottom:50px") Average Conditions when #{searchbin_data.building} is consuming #{searchbin_data.usagekW} kW
   
   div.row
     div.col-sm-3(style="text-align:center")
