--- a/server-nodejs/nodetest1/views/twoplots.jade
+++ b/server-nodejs/nodetest1/views/twoplots.jade
@@ -6,12 +6,12 @@ block content
       h3(style="text-align:center") The new set point values reduce energy usage by 
         span(style="color:#3c8442") #{evaluator_data.energy_saving}%.
 
-      div
-      p Predicted data assuming set point values:
+    div
+      p(style="padding-left:20px") Predicted data assuming set point values:
       div.row 
         div.col-sm-3(style="text-align:center")
           img(src="/images/ChilledWaterTemp.png" style="max-width:25%; height:auto; margin:auto")
-          p(style="margin:auto") Chilled Water Temperature: #{evaluator_data.cwsetp} C 
+          p(style="margin:auto; font-size:20px") Chilled Water Temperature: #{evaluator_data.cwsetp} C 
           p(style="margin:auto") default: 6.7 C
           svg(id="ChilledWaterTempSvg" width="90" height="90" style="margin:auto")
           script.
@@ -22,11 +22,11 @@ block content
             var height = +svg.attr("height"); 
             var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
             var p = (#{evaluator_data.cwsetp} - 6.0) / (8.0 - 0.0);
-            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#e8e8e8").attr("d", arc); 
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#63caf9");
         div.col-sm-3(style="text-align:center")
           img(src="/images/LightingLevel.png" style="max-width:25%; height:auto; margin:auto")
-          p(style="margin:auto") Lighting Level: #{evaluator_data.lil} % 
+          p(style="margin:auto; font-size:20px") Lighting Level: #{evaluator_data.lil} % 
           p(style="margin:auto") default: 70%
           svg(id="LightingLevelSvg" width="90" height="90" style="margin:auto")
           script.
@@ -37,11 +37,11 @@ block content
             var height = +svg.attr("height"); 
             var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
             var p = (#{evaluator_data.lil} - 0) / (100 - 0);
-            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#e8e8e8").attr("d", arc); 
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#f7ef62");
         div.col-sm-3(style="text-align:center")
           img(src="/images/ZoneTemp.png" style="max-width:25%; height:auto; margin:auto")
-          p(style="margin:auto") Zone Temperature: #{evaluator_data.clgsetp} C 
+          p(style="margin:auto; font-size:20px") Zone Temperature: #{evaluator_data.clgsetp} C 
           p(style="margin:auto") default: 26.7 C
           svg(id="ZoneTempSvg" width="90" height="90" style="margin:auto")
           script.
@@ -52,7 +52,7 @@ block content
             var height = +svg.attr("height"); 
             var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
             var p = (#{evaluator_data.clgsetp} - 24.0) / (28.0 - 24.0);
-            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#e8e8e8").attr("d", arc); 
             var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#ce5a40");      
         div.col-sm-3(style="text-align:center")
             svg(id="FillCircleSvg" width="110" height="110" style="margin:auto")
