--- a/server-nodejs/nodetest1/views/threeplots.jade
+++ b/server-nodejs/nodetest1/views/threeplots.jade
@@ -17,7 +17,11 @@ block content
                    text: 'Energy Usage'
                },
                xAxis: {
-                   categories: [#{baseline_data.time}],
+                   tickInterval: 5 * 60 * 1000,
+                   type: 'datetime',
+                  dateTimeLabelFormats: {
+                   day: '%H:%M'
+                 },
                    title : { text: 'Time' }
                },
                yAxis: {
@@ -28,15 +32,18 @@ block content
                series: [
                   {
                     name: 'Strategy 0',
-                    data: [#{synthesizer_data[0].y_predict}]
+                    data: [#{synthesizer_data[0].y_predict}],
+                    pointInterval: 24 *60 * 60 *1000 /288
                   },
                   {
                     name: 'Strategy 1',
-                    data: [#{synthesizer_data[1].y_predict}]
+                    data: [#{synthesizer_data[1].y_predict}],
+                    pointInterval: 24 *60 * 60 *1000 /288
                   },
                   {
                     name: 'Strategy 2',
-                    data: [#{synthesizer_data[2].y_predict}]
+                    data: [#{synthesizer_data[2].y_predict}],
+                    pointInterval: 24 *60 * 60 *1000 /288
                   }
                ]
            });
