--- a/server-nodejs/nodetest1/views/twoplots.jade
+++ b/server-nodejs/nodetest1/views/twoplots.jade
@@ -62,7 +62,11 @@ block content
                    text: 'Energy Usage'
                },
                xAxis: {
-                   categories: [#{baseline_data.time}],
+                   tickInterval: 5 * 60 * 1000,
+                   type: 'datetime',
+                    dateTimeLabelFormats: {
+                    day: '%H:%M'
+                 },
                    title : { text: 'Time' }
                },
                yAxis: {
@@ -73,11 +77,13 @@ block content
                series: [
                   {
                     name: 'Baseline',
-                    data: [#{baseline_data.y_predict}]
+                    data: [#{baseline_data.y_predict}],
+                    pointInterval: 24 *60 * 60 *1000 /288
                   },
                   {
                     name: 'Predicted',
-                    data: [#{evaluator_data.y_predict}]
+                    data: [#{evaluator_data.y_predict}],
+                    pointInterval: 24 *60 * 60 *1000 /288
                   }
                ]
            });
