--- a/server-nodejs/nodetest1/views/threeplots.jade
+++ b/server-nodejs/nodetest1/views/threeplots.jade
@@ -38,7 +38,7 @@ block content
             p(style="font-size:16px") Chilled Water Temperature: #{synthesizer_data[2].cwsetp} C
             p(style="font-size:16px") Zone Temperature: #{synthesizer_data[2].clgsetp} C
 
-    div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px")
+    div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px; padding-left:20px; padding-right:20px")
     script.
       $(function () { 
                  var myChart = Highcharts.chart('lineContainer', {
