fixing plot for optimal set points

--- a/server-nodejs/nodetest1/views/optimumconditions.jade
+++ b/server-nodejs/nodetest1/views/optimumconditions.jade
@@ -3,7 +3,7 @@ extends layout
 block content
 
     div(style="padding-bottom:40px")
-      h3(style="text-align:center") The optimal set points are: #{dr_synthesize_data.optimal_lit}
+      h3(style="text-align:center") The optimal set points are lighting level #{dr_synthesize_data.optimal_lit} %, chilled water temperature #{dr_synthesize_data.optimal_cw} C, and zone temperature #{dr_synthesize_data.optimal_clg} C
 
     div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px; padding-left:20px; padding-right:20px")
     script.
@@ -16,7 +16,6 @@ block content
                    text: 'Optimal Set Point Values'
                },
                xAxis: {
-                  
                    title : { text: 'Time' },
                    tickInterval: 5 * 60 * 1000,
                    type: 'datetime',
@@ -38,37 +37,57 @@ block content
                      color: '#0000FF', // blue
                      width: 2,
                      value: Date.UTC(2017,7,17,18,0) // Position, you'll have to translate this to the values on your x axis
-                   }]
+                   }],
+                   crosshair: true
                },
               yAxis: 
                 [{
-                  title: {text: 'Temperature (C)'}
+                  title: {
+                    text: 'Temperature (C)',
+                    style: {color: 'Black'}
+                  },
+                  labels: {
+                    style: {color: 'Black'}
+                  }
                 },
                 {
-                  title: {text: 'Percentage (%)'}
+                  title: {
+                    text: 'Percentage (%)',
+                    style: {color: 'LightBlue'}
+                  },
+                  labels: {
+                    style: {color: 'LightBlue'}
+                  },
+                  opposite: true
                 }],
-               series: [
+                tooltip: {
+                  shared: true
+                 },
+                series: [
                   {
                     name: 'Lighting Level',
                     type: 'line',
                     data: [#{dr_synthesize_data.lighting}],
                     yAxis: 1,
                     pointStart: Date.UTC(2017,7,17,12,25),
-                    pointInterval: 8 *60 * 60 *1000 /97
+                    pointInterval: 8 *60 * 60 *1000 /97,
+                    tooltip: {valueSuffix: ' %'}
                   },
                   {
                     name: 'Chilled Water Temperature',
                     type: 'line',
                     data: [#{dr_synthesize_data.cw}],
                     pointStart: Date.UTC(2017,7,17,12,25),
-                    pointInterval: 8 *60 * 60 *1000 /97
+                    pointInterval: 8 *60 * 60 *1000 /97,
+                    tooltip: {valueSuffix: ' C'}
                   },
                   {
                     name: 'Zone Temperature',
                     type: 'line',
                     data: [#{dr_synthesize_data.clg}],
                     pointStart: Date.UTC(2017,7,17,12,25),
-                    pointInterval: 8 *60 * 60 *1000 /97
+                    pointInterval: 8 *60 * 60 *1000 /97,
+                    tooltip: {valueSuffix: ' C'}
                   }
                 ]
            });
