--- a/server-nodejs/nodetest1/views/optimumconditions.jade
+++ b/server-nodejs/nodetest1/views/optimumconditions.jade
@@ -3,7 +3,52 @@ extends layout
 block content
 
     div(style="padding-bottom:40px")
-      h3(style="text-align:center") The optimal set points are lighting level #{dr_synthesize_data.optimal_lit} %, chilled water temperature #{dr_synthesize_data.optimal_cw} C, and zone temperature #{dr_synthesize_data.optimal_clg} C
+      div.row 
+        div.col-sm-4(style="text-align:center")
+          img(src="/images/ChilledWaterTemp.png" style="max-width:25%; height:auto; margin:auto")
+          p(style="margin:auto; font-size:20px") Chilled Water Temperature: #{dr_synthesize_data.optimal_cw} C 
+          p(style="margin:auto") default: 6.7 C
+          svg(id="ChilledWaterTempSvg" width="90" height="90" style="margin:auto")
+          script.
+            var tau = 2 * Math.PI; 
+            var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+            var svg = d3.select("#ChilledWaterTempSvg"); 
+            var width = +svg.attr("width"); 
+            var height = +svg.attr("height"); 
+            var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+            var p = (#{dr_synthesize_data.optimal_cw} - 6.0) / (8.0 - 0.0);
+            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#e8e8e8").attr("d", arc); 
+            var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#63caf9");
+        div.col-sm-4(style="text-align:center")
+          img(src="/images/LightingLevel.png" style="max-width:25%; height:auto; margin:auto")
+          p(style="margin:auto; font-size:20px") Lighting Level: #{dr_synthesize_data.optimal_lit} % 
+          p(style="margin:auto") default: 70%
+          svg(id="LightingLevelSvg" width="90" height="90" style="margin:auto")
+          script.
+            var tau = 2 * Math.PI; 
+            var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+            var svg = d3.select("#LightingLevelSvg"); 
+            var width = +svg.attr("width"); 
+            var height = +svg.attr("height"); 
+            var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+            var p = (#{dr_synthesize_data.optimal_lit} - 0) / (100 - 0);
+            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#e8e8e8").attr("d", arc); 
+            var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#f7ef62");
+        div.col-sm-4(style="text-align:center")
+          img(src="/images/ZoneTemp.png" style="max-width:25%; height:auto; margin:auto")
+          p(style="margin:auto; font-size:20px") Zone Temperature: #{dr_synthesize_data.optimal_clg} C 
+          p(style="margin:auto") default: 26.7 C
+          svg(id="ZoneTempSvg" width="90" height="90" style="margin:auto")
+          script.
+            var tau = 2 * Math.PI; 
+            var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+            var svg = d3.select("#ZoneTempSvg"); 
+            var width = +svg.attr("width"); 
+            var height = +svg.attr("height"); 
+            var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+            var p = (#{dr_synthesize_data.optimal_clg} - 24.0) / (28.0 - 24.0);
+            var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#e8e8e8").attr("d", arc); 
+            var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#ce5a40");      
 
     div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px; padding-left:20px; padding-right:20px")
     script.
