--- a/server-nodejs/nodetest1/views/optimumconditions.jade
+++ b/server-nodejs/nodetest1/views/optimumconditions.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-    div(style="padding-bottom:40px")
+    div(style="padding-bottom:40px; padding-top: 40px")
       div.row 
         div.col-sm-4(style="text-align:center")
           img(src="/images/ChilledWaterTemp.png" style="max-width:25%; height:auto; margin:auto")
@@ -98,10 +98,10 @@ block content
                 {
                   title: {
                     text: 'Percentage (%)',
-                    style: {color: 'LightBlue'}
+                    style: {color: 'Black'}
                   },
                   labels: {
-                    style: {color: 'LightBlue'}
+                    style: {color: 'Black'}
                   },
                   opposite: true
                 }],
